--- a/server/Makefile
+++ b/server/Makefile
@@ -101,6 +101,10 @@ linux: linux_$(ARCH)
 
 osx: osx_$(ARCH)
 
+linux_common:
+	$(MKDIR) build$(PATHSEP)$(ARCH)-$(SYSTEM) || $(TRUE)
+	echo -e "480\n638500" &> build$(PATHSEP)steam_appid.txt || $(TRUE)
+
 windows_i386:
 	$(MKDIR) build$(PATHSEP)i386-win32 || $(TRUE)
 	$(COMPILER) -o./build/$(EXECUTABLE).exe -FU./build/i386-win32 -Twin32 -Pi386 $(EXECUTABLE).lpr
@@ -109,12 +113,10 @@ windows_x86_64:
 	$(MKDIR) build$(PATHSEP)x86_64-win64 || $(TRUE)
 	$(COMPILER) -o./build/$(EXECUTABLE)_x64.exe -FU./build/x86_64-win64 -Twin64 -Px86_64 $(EXECUTABLE).lpr
 
-linux_i386:
-	$(MKDIR) build$(PATHSEP)i386-linux || $(TRUE)
+linux_i386: linux_common
 	$(COMPILER) -o./build/$(EXECUTABLE) -k-rpath -k'\$$ORIGIN/' -FU./build/i386-linux -Tlinux -Pi386 $(EXECUTABLE).lpr
 
-linux_x86_64:
-	$(MKDIR) build$(PATHSEP)x86_64-linux || $(TRUE)
+linux_x86_64: linux_common
 	$(COMPILER) -o./build/$(EXECUTABLE)_x64 -k-rpath -k'\$$ORIGIN/' -FU./build/x86_64-linux -Tlinux -Px86_64 $(EXECUTABLE).lpr
 
 osx_i386:
