uname and format fixes

--- a/server/Makefile
+++ b/server/Makefile
@@ -29,8 +29,9 @@ ifeq ($(OS),Windows_NT)
     endif
   endif
 else
-  ifeq ($(shell uname), Linux)
+  ifeq ($(shell uname -o), GNU/Linux)
     SYSTEM = linux
+    steam = on
   else
     ifeq ($(shell uname), Darwin)
       SYSTEM = osx
@@ -38,16 +39,16 @@ else
       SYSTEM = unknown
     endif
   endif
-    UNAME_P := $(shell uname -p)
-    ifeq ($(UNAME_P),x86_64)
-      ARCH = x86_64
-    endif
-    ifneq ($(filter %86,$(UNAME_P)),)
-      ARCH = i386
-    endif
-    ifneq ($(filter arm%,$(UNAME_P)),)
-      ARCH = arm
-    endif
+  UNAME_M := $(shell uname -m)
+  ifeq ($(UNAME_M),x86_64)
+    ARCH = x86_64
+  endif
+  ifneq ($(filter %86,$(UNAME_M)),)
+    ARCH = i386
+  endif
+  ifneq ($(filter arm%,$(UNAME_M)),)
+    ARCH = arm
+  endif
 endif
 
 ifeq ($(mode),release)
