--- a/client/Makefile
+++ b/client/Makefile
@@ -17,45 +17,64 @@ ifeq ($(OS),Windows_NT)
 
   ifeq ($(PROCESSOR_ARCHITEW6432),AMD64)
     ARCH = x86_64
+    ARCH_EXT = _x64
+    EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+    SYSTEM_ARCH = win64
   else
     ifeq ($(PROCESSOR_ARCHITECTURE),AMD64)
       ARCH = x86_64
+      ARCH_EXT = _x64
+      EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+      SYSTEM_ARCH = win64
     endif
     ifeq ($(PROCESSOR_ARCHITECTURE),x86)
       ARCH = i386
+      ARCH_EXT = ""
+      EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+      SYSTEM_ARCH = win32
     endif
     ifeq ($(PROCESSOR_ARCHITECTURE),ARM64)
       ARCH = arm
+      ARCH_EXT = _arm
+      EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+      SYSTEM_ARCH = arm
     endif
   endif
 else
-  ifeq ($(shell uname), Linux)
+  ifeq ($(shell uname -o), GNU/Linux)
     SYSTEM = linux
+    steam = on
+    SYSTEM_ARCH = linux
   else
     ifeq ($(shell uname), Darwin)
       SYSTEM = osx
+      steam = on
+      SYSTEM_ARCH = darwin
     else
       SYSTEM = unknown
     endif
   endif
-    UNAME_P := $(shell uname -p)
-    ifeq ($(UNAME_P),x86_64)
-      ARCH = x86_64
-    endif
-    ifneq ($(filter %86,$(UNAME_P)),)
-      ARCH = i386
-    endif
-    ifneq ($(filter arm%,$(UNAME_P)),)
-      ARCH = arm
-    endif
+  UNAME_M := $(shell uname -m)
+  ifeq ($(UNAME_M),x86_64)
+    ARCH = x86_64
+    ARCH_EXT = _x64
+    EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+  endif
+  ifneq ($(filter %86,$(UNAME_M)),)
+    ARCH = i386
+    ARCH_EXT = ""
+    EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+  endif
+  ifneq ($(filter arm%,$(UNAME_M)),)
+    ARCH = arm
+    ARCH_EXT = _arm
+    EXECUTABLE_ARCH = $(EXECUTABLE)$(ARCH_EXT)
+  endif
 endif
 
 ifeq ($(mode),release)
   CFLAGS = -O3 -Os -CX -OoREGVAR -Xs -XX -vewibq -vn-h- -dTESTING
-  ifeq ($(MAKECMDGOALS),windows_x86_64)
-    CFLAGS += -WB -WR
-  endif
-  ifeq ($(MAKECMDGOALS),windows_i386)
+  ifeq ($(MAKECMDGOALS),windows_$(ARCH))
     CFLAGS += -WB -WR
   endif
 else
@@ -99,29 +118,22 @@ linux: linux_$(ARCH)
 
 osx: osx_$(ARCH)
 
-windows_i386:
-	$(MKDIR) build$(PATHSEP)i386-win32 || $(TRUE)
-	$(COMPILER) -o./build/$(EXECUTABLE).exe -FU./build/i386-win32 -Twin32 -Pi386 $(EXECUTABLE).lpr
+unix_common:
+	$(MKDIR) build$(PATHSEP)$(ARCH)-$(SYSTEM_ARCH) || $(TRUE)
+	echo -e "480\n638490" &> build$(PATHSEP)steam_appid.txt || $(TRUE)
+	cd libs$(PATHSEP)stb && make -f makefile && cd ..$(PATHSEP).. || $(TRUE)
+	test -d "build$(PATHSEP)GameNetworkingSockets" && cd build && cd GameNetworkingSockets && git checkout --recurse-submodules && git pull --recurse-submodules --all -f && cd .. || $(TRUE)
+	test ! -d "build$(PATHSEP)GameNetworkingSockets" && cd build && git clone --recurse-submodules --recursive https://github.com/ValveSoftware/GameNetworkingSockets/ && cd GameNetworkingSockets && cmake . && make && cp -a libGameNetworkingSockets.so ..$(PATHSEP)shared$(PATHSEP)libs$(PATHSEP)GameNetworkingSockets && cd ..$(PATHSEP).. || $(TRUE) 
 
-windows_x86_64:
-	$(MKDIR) build$(PATHSEP)x86_64-win64 || $(TRUE)
-	$(COMPILER) -o./build/$(EXECUTABLE)_x64.exe -FU./build/x86_64-win64 -Twin64 -Px86_64 $(EXECUTABLE).lpr
+windows_$(ARCH):
+	$(MKDIR) build$(PATHSEP)$(ARCH)-$(SYSTEM_ARCH) || $(TRUE)
+	$(COMPILER) -o./build/$(EXECUTABLE_ARCH).exe -FU./build/$(ARCH)-$(SYSTEM_ARCH) -T$(SYSTEM_ARCH) -P$(ARCH) $(EXECUTABLE).lpr
 
-linux_i386:
-	$(MKDIR) build$(PATHSEP)i386-linux || $(TRUE)
-	$(COMPILER) -o./build/$(EXECUTABLE) -k-rpath -k'\$$ORIGIN/' -FU./build/i386-linux -Tlinux -Pi386 $(EXECUTABLE).lpr
+linux_$(ARCH): unix_common
+	$(COMPILER) -o./build/$(EXECUTABLE_ARCH) -k-rpath -k'\$$ORIGIN/' -FU. /build/$(ARCH)-$(SYSTEM_ARCH) -T$(SYSTEM_ARCH) -P$(ARCH) $(EXECUTABLE).lpr
 
-linux_x86_64:
-	$(MKDIR) build$(PATHSEP)x86_64-linux || $(TRUE)
-	$(COMPILER) -o./build/$(EXECUTABLE)_x64 -k-rpath -k'\$$ORIGIN/' -FU./build/x86_64-linux -Tlinux -Px86_64 $(EXECUTABLE).lpr
-
-osx_i386:
-	$(MKDIR) build$(PATHSEP)i386-darwin || $(TRUE)
-	$(COMPILER) -o./build/$(EXECUTABLE) -Fu./macOS/Frameworks -Fl./macOS/Frameworks -Fu./libs/macOS -k"-FmacOS/Frameworks" -k"-framework" -k"OpenAL" -k"-framework" -k"OpenGL" -k"-framework" -k"SDL2" -k"-rpath" -k"@executable_path" -k"-rpath" -k"@executable_path/../Frameworks" -dOPENGL_FRAMEWORK  -FU./build/i386-darwin -Tdarwin -Pi386 $(EXECUTABLE).lpr
-
-osx_x86_64:
-	$(MKDIR) build$(PATHSEP)x86_64-darwin || $(TRUE)
-	$(COMPILER) -o./build/$(EXECUTABLE)_x64 -Fu./macOS/Frameworks -Fl./macOS/Frameworks -Fu./libs/macOS -k"-FmacOS/Frameworks" -k"-framework" -k"OpenAL" -k"-framework" -k"OpenGL" -k"-framework" -k"SDL2" -k"-rpath" -k"@executable_path" -k"-rpath" -k"@executable_path/../Frameworks" -dOPENGL_FRAMEWORK  -FU./build/x86_64-darwin -Tdarwin -Px86_64 $(EXECUTABLE).lpr
+osx_$(ARCH): unix_common
+	$(COMPILER) -o./build/$(EXECUTABLE_ARCH) -Fu./macOS/Frameworks -Fl./macOS/Frameworks -Fu./libs/macOS -k"-FmacOS/Frameworks" -k"-framework" -k"OpenAL" -k"-framework" -k"OpenGL" -k"-framework" -k"SDL2" -k"-rpath" -k"@executable_path" -k"-rpath" -k"@executable_path/../Frameworks" -dOPENGL_FRAMEWORK  -FU./build/$(ARCH)-$(SYSTEM_ARCH) -T$(SYSTEM_ARCH) -P$(ARCH) $(EXECUTABLE).lpr
 
 clean:
 	rm -rf \
