Minor CMake fixes

--- a/shared/libs/GameNetworkingSockets/CMakeLists.txt
+++ b/shared/libs/GameNetworkingSockets/CMakeLists.txt
@@ -60,8 +60,8 @@ FetchContent_Declare(
 
 FetchContent_Populate(gamenetworkingsockets)
 
-set(GAMENETWORKINGSOCKETS_BUILD_EXAMPLES OFF)
-set(GAMENETWORKINGSOCKETS_BUILD_TESTS OFF)
+option(GAMENETWORKINGSOCKETS_BUILD_EXAMPLES OFF)
+option(GAMENETWORKINGSOCKETS_BUILD_TESTS OFF)
 
 ADD_SUBDIRECTORY( ${GNS_SOURCE_DIR} EXCLUDE_FROM_ALL)
 ADD_DEPENDENCIES(GameNetworkingSockets GameNetworkingSockets)
