Fixes for client release build on Windows

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -73,9 +73,9 @@ if(BUILD_SMOD)
 endif()
 
 if(UNIX)
-  if(BUILD_STEAM)
-    target_link_libraries(soldat stb)
-  else()
-    target_link_libraries(soldat stb GameNetworkingSockets protobuf)
-  endif()
+  target_link_libraries(soldat stb)
+endif()
+
+if(NOT APPLE AND NOT BUILD_STEAM)
+  target_link_libraries(soldat GameNetworkingSockets protobuf)
 endif()
