--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,6 +7,7 @@ if(${CMAKE_Pascal_COMPILER_VERSION} VERSION_LESS 3.0)
   )
 endif()
 
+# Hide fgl inlining warnings
 if(${CMAKE_Pascal_COMPILER_VERSION} VERSION_GREATER 3.1)
   add_flag_append(CMAKE_Pascal_FLAGS "-vm6058")
 endif()
@@ -35,11 +36,6 @@ add_flag_append(CMAKE_Pascal_FLAGS "-Fl${PHYSFS_LIBRARY_DIR}")
 
 add_flag_append(CMAKE_Pascal_FLAGS "-dSERVER")
 
-# Hide fgl inlining warnings
-if(${CMAKE_Pascal_COMPILER_VERSION} VERSION_GREATER 3.1)
-  add_flag_append(CMAKE_Pascal_FLAGS "-vm6058")
-endif()
-
 option(BUILD_SCRIPTCORE "Build ScriptCore" True)
 option(BUILD_RCON "Build Rcon" True)
 
@@ -59,6 +55,6 @@ set_source_files_properties(soldatserver.lpr PROPERTIES OBJECT_DEPENDS
 
 add_executable(soldatserver soldatserver.lpr)
 
-if((UNIX OR WIN32) AND NOT BUILD_STEAM)
+if(NOT BUILD_STEAM)
   target_link_libraries(soldatserver GameNetworkingSockets)
 endif()
