--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,19 +35,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 if(UNIX)
   if(APPLE)
     set(target_library_install_dir "../Frameworks/")
-    set(CMAKE_INSTALL_PREFIX "Soldat.app/Contents/MacOS/")
+    #set(CMAKE_INSTALL_PREFIX "Soldat.app/Contents/MacOS/")
     set(CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
     set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR TRUE)
     set(CMAKE_INSTALL_NAME_DIR "@executable_path/../Frameworks")
+    set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
   else()
     set(CMAKE_INSTALL_RPATH
       "$ORIGIN/../${target_library_install_dir}/:$ORIGIN/:${CMAKE_INSTALL_PREFIX}/${target_library_install_dir}/"
     )
+    set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
   endif()
 
   set(CMAKE_SKIP_BUILD_RPATH FALSE)
   set(CMAKE_SKIP_INSTALL_RPATH FALSE)
-  set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
   set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)
 endif()
 
