--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -4,13 +4,14 @@ find_package(Freetype REQUIRED)
 add_subdirectory(libs/stb)
 
 if(APPLE)
+  add_flag_append(CMAKE_Pascal_FLAGS "-Fl/usr/local/lib")
   # add_flag_append(CMAKE_Pascal_FLAGS "-Fu./macOS/Frameworks")
   # add_flag_append(CMAKE_Pascal_FLAGS "-Fl./macOS/Frameworks")
   # add_flag_append(CMAKE_Pascal_FLAGS "-Fu./macOS/Frameworks")
   # add_flag_append(CMAKE_Pascal_FLAGS "-k-FmacOS/Frameworks")
   add_flag_append(CMAKE_Pascal_FLAGS "-k\"-framework\" -k\"OpenAL\"")
   add_flag_append(CMAKE_Pascal_FLAGS "-k\"-framework\" -k\"OpenGL\"")
-  # add_flag_append(CMAKE_Pascal_FLAGS "-k\"-rpath\" -k\"@executable_path\"")
+  add_flag_append(CMAKE_Pascal_FLAGS "-k\"-rpath\" -k\"@executable_path\"")
   # add_flag_append(CMAKE_Pascal_FLAGS "-k\"-rpath\"
   # -k\"@executable_path/../Frameworks\"")
   add_flag_append(CMAKE_Pascal_FLAGS "-dOPENGL_FRAMEWORK")
